lab_4/Code/syntax.output
State 29 conflicts: 1 shift/reduce
State 34 conflicts: 1 shift/reduce
State 58 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | ε

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | ID LP error RP
   23       | error RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec
   27         | Specifier error

   28 CompSt: LC DefList StmtList RC
   29       | error RC

   30 StmtList: Stmt StmtList
   31         | ε

   32 Stmt: Exp SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | WHILE LP Exp RP Stmt
   38     | Exp error
   39     | error SEMI

   40 DefList: Def DefList
   41        | ε

   42 Def: Specifier DecList SEMI
   43    | Specifier error SEMI
   44    | error SEMI

   45 DecList: Dec
   46        | Dec COMMA DecList

   47 Dec: VarDec
   48    | VarDec ASSIGNOP Exp

   49 Exp: Exp ASSIGNOP Exp
   50    | Exp AND Exp
   51    | Exp OR Exp
   52    | Exp RELOP Exp
   53    | Exp PLUS Exp
   54    | Exp MINUS Exp
   55    | Exp STAR Exp
   56    | Exp DIV Exp
   57    | LP Exp RP
   58    | MINUS Exp
   59    | NOT Exp
   60    | ID LP Args RP
   61    | ID LP RP
   62    | Exp LB Exp RB
   63    | Exp DOT ID
   64    | ID
   65    | INT
   66    | FLOAT
   67    | error

   68 Args: Exp COMMA Args
   69     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 22 23 27 29 38 39 43 44 67
    INT <node> (258) 19 65
    FLOAT <node> (259) 66
    ID <node> (260) 15 17 18 20 21 22 60 61 63 64
    SEMI <node> (261) 4 5 7 8 32 34 39 42 43 44
    COMMA <node> (262) 10 24 46 68
    ASSIGNOP <node> (263) 48 49
    RELOP <node> (264) 52
    PLUS <node> (265) 53
    MINUS <node> (266) 54 58
    STAR <node> (267) 55
    DIV <node> (268) 56
    AND <node> (269) 50
    OR <node> (270) 51
    DOT <node> (271) 63
    NOT <node> (272) 59
    TYPE <node> (273) 11
    LP <node> (274) 20 21 22 35 36 37 57 60 61
    RP <node> (275) 20 21 22 23 35 36 37 57 60 61
    LB <node> (276) 19 62
    RB <node> (277) 19 62
    LC <node> (278) 13 28
    RC <node> (279) 13 28 29
    IF <node> (280) 35 36
    ELSE <node> (281) 36
    WHILE <node> (282) 37
    STRUCT <node> (283) 13 14
    RETURN <node> (284) 34
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <node> (32)
        on left: 1
        on right: 0
    ExtDefList <node> (33)
        on left: 2 3
        on right: 1 2
    ExtDef <node> (34)
        on left: 4 5 6 7 8
        on right: 2
    ExtDecList <node> (35)
        on left: 9 10
        on right: 4 10
    Specifier <node> (36)
        on left: 11 12
        on right: 4 5 6 7 26 27 42 43
    StructSpecifier <node> (37)
        on left: 13 14
        on right: 12
    OptTag <node> (38)
        on left: 15 16
        on right: 13
    Tag <node> (39)
        on left: 17
        on right: 14
    VarDec <node> (40)
        on left: 18 19
        on right: 9 10 19 26 47 48
    FunDec <node> (41)
        on left: 20 21 22 23
        on right: 6 7
    VarList <node> (42)
        on left: 24 25
        on right: 20 24
    ParamDec <node> (43)
        on left: 26 27
        on right: 24 25
    CompSt <node> (44)
        on left: 28 29
        on right: 6 33
    StmtList <node> (45)
        on left: 30 31
        on right: 28 30
    Stmt <node> (46)
        on left: 32 33 34 35 36 37 38 39
        on right: 30 35 36 37
    DefList <node> (47)
        on left: 40 41
        on right: 13 28 40
    Def <node> (48)
        on left: 42 43 44
        on right: 40
    DecList <node> (49)
        on left: 45 46
        on right: 42 46
    Dec <node> (50)
        on left: 47 48
        on right: 45 46
    Exp <node> (51)
        on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
        on right: 32 34 35 36 37 38 48 49 50 51 52 53 54 55 56 57 58 59 62 63 68 69
    Args <node> (52)
        on left: 68 69
        on right: 60 68


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error • SEMI

    SEMI  shift, and go to state 9


State 2

   11 Specifier: TYPE •

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT • OptTag LC DefList RC
   14                | STRUCT • Tag

    ID  shift, and go to state 10

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
    7       | Specifier • FunDec SEMI

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   12 Specifier: StructSpecifier •

    $default  reduce using rule 12 (Specifier)


State 9

    8 ExtDef: error SEMI •

    $default  reduce using rule 8 (ExtDef)


State 10

   15 OptTag: ID •
   17 Tag: ID •

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 11

   13 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 21


State 12

   14 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 14 (StructSpecifier)


State 13

    0 $accept: Program $end •

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 15

   23 FunDec: error • RP

    RP  shift, and go to state 22


State 16

   18 VarDec: ID •
   20 FunDec: ID • LP VarList RP
   21       | ID • LP RP
   22       | ID • LP error RP

    LP  shift, and go to state 23

    $default  reduce using rule 18 (VarDec)


State 17

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 24


State 19

    9 ExtDecList: VarDec •
   10           | VarDec • COMMA ExtDecList
   19 VarDec: VarDec • LB INT RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 9 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec • CompSt
    7       | Specifier FunDec • SEMI

    error  shift, and go to state 27
    SEMI   shift, and go to state 28
    LC     shift, and go to state 29

    CompSt  go to state 30


State 21

   13 StructSpecifier: STRUCT OptTag LC • DefList RC

    error   shift, and go to state 31
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 41 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 33
    Def              go to state 34


State 22

   23 FunDec: error RP •

    $default  reduce using rule 23 (FunDec)


State 23

   20 FunDec: ID LP • VarList RP
   21       | ID LP • RP
   22       | ID LP • error RP

    error   shift, and go to state 35
    TYPE    shift, and go to state 2
    RP      shift, and go to state 36
    STRUCT  shift, and go to state 3

    Specifier        go to state 37
    StructSpecifier  go to state 8
    VarList          go to state 38
    ParamDec         go to state 39


State 24

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 25

   10 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 40

    ExtDecList  go to state 41
    VarDec      go to state 19


State 26

   19 VarDec: VarDec LB • INT RB

    INT  shift, and go to state 42


State 27

   29 CompSt: error • RC

    RC  shift, and go to state 43


State 28

    7 ExtDef: Specifier FunDec SEMI •

    $default  reduce using rule 7 (ExtDef)


State 29

   28 CompSt: LC • DefList StmtList RC

    error   shift, and go to state 31
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 41 (DefList)]
    INT     reduce using rule 41 (DefList)
    FLOAT   reduce using rule 41 (DefList)
    ID      reduce using rule 41 (DefList)
    MINUS   reduce using rule 41 (DefList)
    NOT     reduce using rule 41 (DefList)
    LP      reduce using rule 41 (DefList)
    LC      reduce using rule 41 (DefList)
    RC      reduce using rule 41 (DefList)
    IF      reduce using rule 41 (DefList)
    WHILE   reduce using rule 41 (DefList)
    RETURN  reduce using rule 41 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 44
    Def              go to state 34


State 30

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 31

   44 Def: error • SEMI

    SEMI  shift, and go to state 45


State 32

   42 Def: Specifier • DecList SEMI
   43    | Specifier • error SEMI

    error  shift, and go to state 46
    ID     shift, and go to state 40

    VarDec   go to state 47
    DecList  go to state 48
    Dec      go to state 49


State 33

   13 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 50


State 34

   40 DefList: Def • DefList

    error   shift, and go to state 31
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 41 (DefList)]
    INT     reduce using rule 41 (DefList)
    FLOAT   reduce using rule 41 (DefList)
    ID      reduce using rule 41 (DefList)
    MINUS   reduce using rule 41 (DefList)
    NOT     reduce using rule 41 (DefList)
    LP      reduce using rule 41 (DefList)
    LC      reduce using rule 41 (DefList)
    RC      reduce using rule 41 (DefList)
    IF      reduce using rule 41 (DefList)
    WHILE   reduce using rule 41 (DefList)
    RETURN  reduce using rule 41 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 51
    Def              go to state 34


State 35

   22 FunDec: ID LP error • RP

    RP  shift, and go to state 52


State 36

   21 FunDec: ID LP RP •

    $default  reduce using rule 21 (FunDec)


State 37

   26 ParamDec: Specifier • VarDec
   27         | Specifier • error

    error  shift, and go to state 53
    ID     shift, and go to state 40

    VarDec  go to state 54


State 38

   20 FunDec: ID LP VarList • RP

    RP  shift, and go to state 55


State 39

   24 VarList: ParamDec • COMMA VarList
   25        | ParamDec •

    COMMA  shift, and go to state 56

    $default  reduce using rule 25 (VarList)


State 40

   18 VarDec: ID •

    $default  reduce using rule 18 (VarDec)


State 41

   10 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 10 (ExtDecList)


State 42

   19 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 57


State 43

   29 CompSt: error RC •

    $default  reduce using rule 29 (CompSt)


State 44

   28 CompSt: LC DefList • StmtList RC

    error   shift, and go to state 58
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    ID      shift, and go to state 61
    MINUS   shift, and go to state 62
    NOT     shift, and go to state 63
    LP      shift, and go to state 64
    LC      shift, and go to state 29
    IF      shift, and go to state 65
    WHILE   shift, and go to state 66
    RETURN  shift, and go to state 67

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 69
    Stmt      go to state 70
    Exp       go to state 71


State 45

   44 Def: error SEMI •

    $default  reduce using rule 44 (Def)


State 46

   43 Def: Specifier error • SEMI

    SEMI  shift, and go to state 72


State 47

   19 VarDec: VarDec • LB INT RB
   47 Dec: VarDec •
   48    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 73
    LB        shift, and go to state 26

    $default  reduce using rule 47 (Dec)


State 48

   42 Def: Specifier DecList • SEMI

    SEMI  shift, and go to state 74


State 49

   45 DecList: Dec •
   46        | Dec • COMMA DecList

    COMMA  shift, and go to state 75

    $default  reduce using rule 45 (DecList)


State 50

   13 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 13 (StructSpecifier)


State 51

   40 DefList: Def DefList •

    $default  reduce using rule 40 (DefList)


State 52

   22 FunDec: ID LP error RP •

    $default  reduce using rule 22 (FunDec)


State 53

   27 ParamDec: Specifier error •

    $default  reduce using rule 27 (ParamDec)


State 54

   19 VarDec: VarDec • LB INT RB
   26 ParamDec: Specifier VarDec •

    LB  shift, and go to state 26

    $default  reduce using rule 26 (ParamDec)


State 55

   20 FunDec: ID LP VarList RP •

    $default  reduce using rule 20 (FunDec)


State 56

   24 VarList: ParamDec COMMA • VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 37
    StructSpecifier  go to state 8
    VarList          go to state 76
    ParamDec         go to state 39


State 57

   19 VarDec: VarDec LB INT RB •

    $default  reduce using rule 19 (VarDec)


State 58

   29 CompSt: error • RC
   39 Stmt: error • SEMI
   67 Exp: error •

    SEMI  shift, and go to state 77
    RC    shift, and go to state 43

    SEMI      [reduce using rule 67 (Exp)]
    $default  reduce using rule 67 (Exp)


State 59

   65 Exp: INT •

    $default  reduce using rule 65 (Exp)


State 60

   66 Exp: FLOAT •

    $default  reduce using rule 66 (Exp)


State 61

   60 Exp: ID • LP Args RP
   61    | ID • LP RP
   64    | ID •

    LP  shift, and go to state 78

    $default  reduce using rule 64 (Exp)


State 62

   58 Exp: MINUS • Exp

    error  shift, and go to state 79
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 80


State 63

   59 Exp: NOT • Exp

    error  shift, and go to state 79
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 81


State 64

   57 Exp: LP • Exp RP

    error  shift, and go to state 79
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 82


State 65

   35 Stmt: IF • LP Exp RP Stmt
   36     | IF • LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 83


State 66

   37 Stmt: WHILE • LP Exp RP Stmt

    LP  shift, and go to state 84


State 67

   34 Stmt: RETURN • Exp SEMI

    error  shift, and go to state 79
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 85


State 68

   33 Stmt: CompSt •

    $default  reduce using rule 33 (Stmt)


State 69

   28 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 86


State 70

   30 StmtList: Stmt • StmtList

    error   shift, and go to state 58
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    ID      shift, and go to state 61
    MINUS   shift, and go to state 62
    NOT     shift, and go to state 63
    LP      shift, and go to state 64
    LC      shift, and go to state 29
    IF      shift, and go to state 65
    WHILE   shift, and go to state 66
    RETURN  shift, and go to state 67

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 87
    Stmt      go to state 70
    Exp       go to state 71


State 71

   32 Stmt: Exp • SEMI
   38     | Exp • error
   49 Exp: Exp • ASSIGNOP Exp
   50    | Exp • AND Exp
   51    | Exp • OR Exp
   52    | Exp • RELOP Exp
   53    | Exp • PLUS Exp
   54    | Exp • MINUS Exp
   55    | Exp • STAR Exp
   56    | Exp • DIV Exp
   62    | Exp • LB Exp RB
   63    | Exp • DOT ID

    error     shift, and go to state 88
    SEMI      shift, and go to state 89
    ASSIGNOP  shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    DOT       shift, and go to state 98
    LB        shift, and go to state 99


State 72

   43 Def: Specifier error SEMI •

    $default  reduce using rule 43 (Def)


State 73

   48 Dec: VarDec ASSIGNOP • Exp

    error  shift, and go to state 79
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 100


State 74

   42 Def: Specifier DecList SEMI •

    $default  reduce using rule 42 (Def)


State 75

   46 DecList: Dec COMMA • DecList

    ID  shift, and go to state 40

    VarDec   go to state 47
    DecList  go to state 101
    Dec      go to state 49


State 76

   24 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 24 (VarList)


State 77

   39 Stmt: error SEMI •

    $default  reduce using rule 39 (Stmt)


State 78

   60 Exp: ID LP • Args RP
   61    | ID LP • RP

    error  shift, and go to state 79
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64
    RP     shift, and go to state 102

    Exp   go to state 103
    Args  go to state 104


State 79

   67 Exp: error •

    $default  reduce using rule 67 (Exp)


State 80

   49 Exp: Exp • ASSIGNOP Exp
   50    | Exp • AND Exp
   51    | Exp • OR Exp
   52    | Exp • RELOP Exp
   53    | Exp • PLUS Exp
   54    | Exp • MINUS Exp
   55    | Exp • STAR Exp
   56    | Exp • DIV Exp
   58    | MINUS Exp •
   62    | Exp • LB Exp RB
   63    | Exp • DOT ID

    STAR  shift, and go to state 94
    DIV   shift, and go to state 95
    DOT   shift, and go to state 98
    LB    shift, and go to state 99

    $default  reduce using rule 58 (Exp)


State 81

   49 Exp: Exp • ASSIGNOP Exp
   50    | Exp • AND Exp
   51    | Exp • OR Exp
   52    | Exp • RELOP Exp
   53    | Exp • PLUS Exp
   54    | Exp • MINUS Exp
   55    | Exp • STAR Exp
   56    | Exp • DIV Exp
   59    | NOT Exp •
   62    | Exp • LB Exp RB
   63    | Exp • DOT ID

    DOT  shift, and go to state 98
    LB   shift, and go to state 99

    $default  reduce using rule 59 (Exp)


State 82

   49 Exp: Exp • ASSIGNOP Exp
   50    | Exp • AND Exp
   51    | Exp • OR Exp
   52    | Exp • RELOP Exp
   53    | Exp • PLUS Exp
   54    | Exp • MINUS Exp
   55    | Exp • STAR Exp
   56    | Exp • DIV Exp
   57    | LP Exp • RP
   62    | Exp • LB Exp RB
   63    | Exp • DOT ID

    ASSIGNOP  shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    DOT       shift, and go to state 98
    RP        shift, and go to state 105
    LB        shift, and go to state 99


State 83

   35 Stmt: IF LP • Exp RP Stmt
   36     | IF LP • Exp RP Stmt ELSE Stmt

    error  shift, and go to state 79
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 106


State 84

   37 Stmt: WHILE LP • Exp RP Stmt

    error  shift, and go to state 79
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 107


State 85

   34 Stmt: RETURN Exp • SEMI
   49 Exp: Exp • ASSIGNOP Exp
   50    | Exp • AND Exp
   51    | Exp • OR Exp
   52    | Exp • RELOP Exp
   53    | Exp • PLUS Exp
   54    | Exp • MINUS Exp
   55    | Exp • STAR Exp
   56    | Exp • DIV Exp
   62    | Exp • LB Exp RB
   63    | Exp • DOT ID

    SEMI      shift, and go to state 108
    ASSIGNOP  shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    DOT       shift, and go to state 98
    LB        shift, and go to state 99


State 86

   28 CompSt: LC DefList StmtList RC •

    $default  reduce using rule 28 (CompSt)


State 87

   30 StmtList: Stmt StmtList •

    $default  reduce using rule 30 (StmtList)


State 88

   38 Stmt: Exp error •

    $default  reduce using rule 38 (Stmt)


State 89

   32 Stmt: Exp SEMI •

    $default  reduce using rule 32 (Stmt)


State 90

   49 Exp: Exp ASSIGNOP • Exp

    error  shift, and go to state 79
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 109


State 91

   52 Exp: Exp RELOP • Exp
